--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <a href="#contact" class="nav-link block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900">
                         Contact
                     </a>
+                    <a href="profile.html" class="nav-link block mt-4 lg:inline-block lg:mt-0 text-gray-600 hover:text-gray-900">
+                        My Profile
+                    </a>
                 </div>
                 <div>
                      <button id="login-btn" class="cta-button inline-block bg-indigo-600 text-white font-semibold py-2 px-6 rounded-full text-lg shadow-md hover:bg-indigo-700 ml-4">
