--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,193 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard - Skilix</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+    </style>
+</head>
+<body class="bg-gray-100">
+
+    <div id="admin-dashboard" class="hidden">
+        <header class="bg-white shadow-sm">
+            <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+                <span class="font-bold text-2xl">Skil<span class="text-indigo-600">ix</span> Admin</span>
+                <div>
+                    <span id="admin-name" class="mr-4"></span>
+                    <a href="index.html" class="text-gray-600 hover:text-indigo-600">Home</a>
+                </div>
+            </nav>
+        </header>
+
+        <main class="container mx-auto px-6 py-8">
+            <h1 class="text-3xl font-bold text-gray-800 mb-8">Admin Dashboard</h1>
+
+            <section class="bg-white p-6 rounded-lg shadow-md mb-8">
+                <h2 class="text-2xl font-semibold mb-4">Create New Internship</h2>
+                <form id="internship-form">
+                    <div class="mb-4">
+                        <label for="title" class="block text-gray-700 font-medium mb-2">Internship Title</label>
+                        <input type="text" id="title" class="w-full px-4 py-2 border rounded-lg" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="description" class="block text-gray-700 font-medium mb-2">Description</label>
+                        <textarea id="description" rows="4" class="w-full px-4 py-2 border rounded-lg" required></textarea>
+                    </div>
+                    <div class="mb-4">
+                        <label for="domain" class="block text-gray-700 font-medium mb-2">Domain (e.g., Web Development)</label>
+                        <input type="text" id="domain" class="w-full px-4 py-2 border rounded-lg" required>
+                    </div>
+                    <button type="submit" class="bg-indigo-600 text-white font-semibold py-2 px-6 rounded-lg hover:bg-indigo-700">
+                        Add Internship
+                    </button>
+                </form>
+            </section>
+
+            <section class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-2xl font-semibold mb-4">Manage Internships</h2>
+                <div id="internships-list" class="space-y-4">
+                    </div>
+            </section>
+        </main>
+    </div>
+
+    <div id="access-denied" class="hidden text-center p-16">
+        <h1 class="text-4xl font-bold text-red-600">Access Denied</h1>
+        <p class="text-xl mt-4">You do not have permission to view this page.</p>
+        <a href="index.html" class="mt-8 inline-block bg-indigo-600 text-white py-3 px-6 rounded-lg">Go to Homepage</a>
+    </div>
+    
+    <div id="message-box" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); padding: 12px 24px; border-radius: 8px; color: white; z-index: 100; opacity: 0; visibility: hidden; transition: opacity 0.3s, visibility 0.3s;"></div>
+
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, addDoc, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+
+    const firebaseConfig = { // PASTE YOUR FIREBASE CONFIG HERE
+        apiKey: "AIzaSyBrP14baJEyuYYt5xOUt4SeSeUFM3RY2rk",
+        authDomain: "skilix.firebaseapp.com",
+        projectId: "skilix",
+        storageBucket: "skilix.appspot.com",
+        messagingSenderId: "1042532384192",
+        appId: "1:1042532384192:web:c0cc1939bb1ba8f7c69c25",
+        measurementId: "G-H7LB645GR9"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    const adminDashboard = document.getElementById('admin-dashboard');
+    const accessDenied = document.getElementById('access-denied');
+    const internshipForm = document.getElementById('internship-form');
+    const internshipsList = document.getElementById('internships-list');
+    const messageBox = document.getElementById('message-box');
+
+    function showMessage(message, isError = false) {
+        messageBox.textContent = message;
+        messageBox.style.backgroundColor = isError ? '#ef4444' : '#22c55e';
+        messageBox.style.opacity = 1;
+        messageBox.style.visibility = 'visible';
+        setTimeout(() => {
+            messageBox.style.opacity = 0;
+            messageBox.style.visibility = 'hidden';
+        }, 3000);
+    }
+
+    async function checkAdminRole(user) {
+        if (!user) {
+            adminDashboard.classList.add('hidden');
+            accessDenied.classList.remove('hidden');
+            return false;
+        }
+
+        const userDocRef = doc(db, "users", user.uid);
+        const userDoc = await getDoc(userDocRef);
+
+        if (userDoc.exists() && userDoc.data().role === 'admin') {
+            document.getElementById('admin-name').textContent = `Welcome, ${userDoc.data().name}`;
+            adminDashboard.classList.remove('hidden');
+            accessDenied.classList.add('hidden');
+            return true;
+        } else {
+            adminDashboard.classList.add('hidden');
+            accessDenied.classList.remove('hidden');
+            return false;
+        }
+    }
+    
+    async function loadInternships() {
+        internshipsList.innerHTML = '<p>Loading internships...</p>';
+        const querySnapshot = await getDocs(collection(db, "internships"));
+        internshipsList.innerHTML = '';
+        if (querySnapshot.empty) {
+            internshipsList.innerHTML = '<p>No internships found. Add one above!</p>';
+        }
+        querySnapshot.forEach((doc) => {
+            const internship = doc.data();
+            const internshipEl = document.createElement('div');
+            internshipEl.className = 'border p-4 rounded-lg flex justify-between items-center';
+            internshipEl.innerHTML = `
+                <div>
+                    <h3 class="text-xl font-bold">${internship.title}</h3>
+                    <p class="text-gray-600">${internship.domain}</p>
+                </div>
+                <button data-id="${doc.id}" class="delete-btn bg-red-500 text-white py-1 px-3 rounded hover:bg-red-600">Delete</button>
+            `;
+            internshipsList.appendChild(internshipEl);
+        });
+    }
+
+    onAuthStateChanged(auth, async (user) => {
+        const isAdmin = await checkAdminRole(user);
+        if (isAdmin) {
+            loadInternships();
+        }
+    });
+
+    internshipForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const title = document.getElementById('title').value;
+        const description = document.getElementById('description').value;
+        const domain = document.getElementById('domain').value;
+
+        try {
+            await addDoc(collection(db, "internships"), {
+                title,
+                description,
+                domain,
+                createdAt: new Date()
+            });
+            showMessage('Internship added successfully!');
+            internshipForm.reset();
+            loadInternships();
+        } catch (error) {
+            showMessage('Error adding internship.', true);
+            console.error(error);
+        }
+    });
+
+    internshipsList.addEventListener('click', async (e) => {
+        if (e.target.classList.contains('delete-btn')) {
+            const internshipId = e.target.dataset.id;
+            if (confirm('Are you sure you want to delete this internship?')) {
+                try {
+                    await deleteDoc(doc(db, "internships", internshipId));
+                    showMessage('Internship deleted.');
+                    loadInternships();
+                } catch (error) {
+                    showMessage('Error deleting internship.', true);
+                }
+            }
+        }
+    });
+
+</script>
+</body>
+</html>
